Bug 1208953 - [mp3] Don't parse data we've already parsed. r=cpearce, a=sylvestre

NotifyDataArrived may be called again due to reads performed in NotifyDataArrived ; causing stall and serious slowdowns.