dom/media/MP3FrameParser.h
@@ -11,6 +11,7 @@
 
 #include "mozilla/Mutex.h"
 #include "nsString.h"
+#include "Intervals.h"
 
 namespace mozilla {
 
@@ -211,6 +212,24 @@ private:
 
   eIsMP3 mIsMP3;
 
+};
+
+class NotifyDataArrivedFilter {
+public:
+  media::IntervalSet<int64_t> NotifyDataArrived(uint32_t aLength, int64_t aOffset) {
+    media::Interval<int64_t> interval(aOffset, aOffset + aLength);
+    media::IntervalSet<int64_t> newIntervals(interval);
+    newIntervals -= mIntervals;
+    mIntervals += interval;
+    return newIntervals;
+  }
+
+  const media::IntervalSet<int64_t>& GetIntervals() {
+    return mIntervals;
+  }
+
+private:
+  media::IntervalSet<int64_t> mIntervals;
 };
 
 } // namespace mozilla
